--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,11 +16,18 @@
         <div class="mt-2">
           <input
             type="email"
-            formControlName="username"
+            formControlName="email"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6"
             placeholder="example@test.com"
           />
+        </div>
+        <div
+          *ngIf="f['email'].errors && f['email'].touched"
+          class="text-red-400"
+        >
+          <p *ngIf="f['email'].errors?.['required']">Email is required!</p>
+          <p *ngIf="f['email'].errors?.['email']">Enter valid email!</p>
         </div>
       </div>
 
@@ -37,6 +44,17 @@
             formControlName="password"
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6"
           />
+        </div>
+        <div
+          *ngIf="f['password'].errors && f['password'].touched"
+          class="text-red-400"
+        >
+          <p *ngIf="f['password'].errors?.['required']">
+            Password is required!
+          </p>
+          <p *ngIf="f['password'].errors?.['minlength']">
+            Password is minimum 6 characters!
+          </p>
         </div>
       </div>
 
