--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
-<div class="w-8/12 mx-auto p-3">
-  <router-outlet></router-outlet>
+<div class="bg-slate-50">
+  <app-header></app-header>
+  <div class="mx-auto min-h-screen p-5">
+    <router-outlet></router-outlet>
+  </div>
 </div>
