--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -10,14 +10,12 @@
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
     <form class="space-y-6" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div>
-        <label
-          for="email"
-          class="block text-sm font-medium leading-6 text-gray-900"
+        <label class="block text-sm font-medium leading-6 text-gray-900"
           >Username</label
         >
         <div class="mt-2">
           <input
-            type="email"
+            type="text"
             formControlName="username"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6"
@@ -29,6 +27,27 @@
           class="text-red-400"
         >
           <p *ngIf="f['username'].errors?.['required']">Username required!</p>
+        </div>
+      </div>
+      <div>
+        <label class="block text-sm font-medium leading-6 text-gray-900"
+          >Email</label
+        >
+        <div class="mt-2">
+          <input
+            type="email"
+            formControlName="email"
+            required
+            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6"
+            placeholder="example@test.com"
+          />
+        </div>
+        <div
+          *ngIf="f['email'].errors && f['email'].touched"
+          class="text-red-400"
+        >
+          <p *ngIf="f['email'].errors?.['required']">Email required!</p>
+          <p *ngIf="f['email'].errors?.['email']">Enter valid email!</p>
         </div>
       </div>
 
@@ -74,17 +93,6 @@
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6"
           />
         </div>
-        <!-- <div
-          *ngIf="f['confirmPassword'].errors && f['confirmPassword'].touched"
-          class="text-red-400"
-        >
-          <p *ngIf="f['confirmPassword'].errors?.['required']">
-            confirmPassword required!
-          </p>
-          <p *ngIf="f['confirmPassword'].errors?.['minlength']">
-            Minimum 6 characters needed!
-          </p>
-        </div> -->
         <div *ngIf="registerForm.errors?.['misMatch']" class="text-red-400">
           <p>password didn't match!</p>
         </div>
@@ -96,7 +104,7 @@
           [disabled]="!this.registerForm.valid"
           class="flex w-full justify-center rounded-md bg-cyan-800 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-cyan-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-600"
         >
-          Sign in
+          Register
         </button>
       </div>
     </form>
