--- a/src/app/post/post-detail/post-detail.component.html
+++ b/src/app/post/post-detail/post-detail.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="post">
-  <div class="mt-3">
+<div *ngIf="post" class="w-full md:max-w-6xl xl:max-w-8xl mx-auto">
+  <div class="mt-3 text-center">
     <h2 class="text-2xl font-bold">{{ post.title | titlecase }}</h2>
-    <p class="my-3">
+    <p class="my-3 flex justify-center items-center">
       <span
         class="bg-cyan-800 mr-3 text-gray-300 px-2 py-1 rounded text-xs"
         *ngFor="let t of post.tags"
@@ -10,48 +10,56 @@
       >
     </p>
   </div>
-  <div>
+  <div class="text-center md:text-left">
     <p>{{ post.body }}</p>
   </div>
 
-  <div class="my-5 border-t-2 border-gray-400"></div>
+  <div class="my-5 border-t-[1px] border-gray-300"></div>
   <div>
-    <h3 class="font-semibold mb-2">comments:</h3>
+    <h3 class="font-semibold mb-3 leading-6 text-xl">comments:</h3>
     <div class="mb-5">
-      <a href="">Sign In To Comment</a>
-      <div>
-        <textarea
-          name=""
-          id=""
-          class="border w-full focus:border-gray-400"
-          rows="3"
-        ></textarea>
-        <button class="bg-cyan-800 px-5 py-2 text-white rounded ml-auto grid">
-          Comment
-        </button>
+      <a
+        *ngIf="!this.loggedUser"
+        class="cursor-pointer bg-cyan-800 text-gray-200 px-5 py-2 text-base rounded font-semibold"
+        [routerLink]="['add-comment']"
+        >Sign In To Comment</a
+      >
+      <a
+        *ngIf="this.loggedUser"
+        class="cursor-pointer bg-cyan-800 text-gray-300 px-5 py-2 text-base rounded font-semibold"
+        [routerLink]="['add-comment']"
+        >Click To Comment</a
+      >
+    </div>
+    <div
+      class="shadow border rounded p-3 mb-3"
+      *ngIf="this.addedComment && this.loggedUser"
+    >
+      <div
+        class="flex gap-3 items-center text-base text-gray-600 font-bold my-3"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
+          />
+        </svg>
+        <p>{{ this.loggedUser.username }}</p>
       </div>
+      <div>"{{ this.addedComment }}"</div>
     </div>
     <div class="flex flex-col gap-5">
-      <div class="shadow p-3" *ngFor="let c of comments">
-        <div class="flex gap-3 items-center text-base text-gray-600 font-bold">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-6 h-6"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
-            />
-          </svg>
-          <p>{{ c.user.username }}</p>
-        </div>
-        <div>"{{ c.body }}"</div>
-      </div>
+      <ng-container *ngFor="let c of comments">
+        <app-post-comment [comment]="c"></app-post-comment>
+      </ng-container>
     </div>
   </div>
 </div>
