--- a/src/app/post/posts/posts.component.html
+++ b/src/app/post/posts/posts.component.html
@@ -1,11 +1,17 @@
-<div class="grid grid-rows-6 grid-flow-col gap-4">
+<div
+  class="mt-5 grid grid-rows-5 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full mx-auto md:max-w-6xl xl:max-w-8xl"
+>
   <div
-    class="shadow p-3"
+    class="p-3 border rounded"
     *ngFor="let post of posts | paginate : { itemsPerPage: 10, currentPage: p }"
   >
     <div>
-      <h2 class="text-xl font-semibold mb-2">{{ post.title }}</h2>
-      <p class="mb-3">
+      <h2
+        class="my-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600"
+      >
+        {{ post.title }}
+      </h2>
+      <p class="mb-3 flex justify-center sm:justify-normal">
         <span
           class="bg-cyan-800 mr-3 text-gray-300 px-2 py-1 rounded text-xs"
           *ngFor="let t of post.tags"
@@ -15,13 +21,16 @@
       </p>
     </div>
     <div>
-      <p>{{ post.body }}</p>
+      <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">
+        {{ post.body }}
+      </p>
     </div>
-    <div class="">
+    <div class="mt-3 mr-3 flex justify-center items-center">
       <button
-        class="grid mt-2 ml-auto text-cyan-800 hover:scale-105"
+        class="mt-2 flex justify-center items-center md:ml-auto text-cyan-800 text-base gap-2 font-bold"
         [routerLink]="[post.id]"
       >
+        Read More
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -33,7 +42,7 @@
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
-            d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
+            d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"
           />
         </svg>
       </button>
