--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,16 @@
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div
+    class="text-center border-[1px] shadow-lg border-red-200 p-3 bg-red-200"
+    *ngIf="this.errMessage"
+  >
+    <p>{{ errMessage }}</p>
+  </div>
+  <div
+    class="text-center border-[1px] shadow-lg border-green-200 p-3 bg-green-300 text-graay-200"
+    *ngIf="this.successMessage"
+  >
+    <p>{{ successMessage }}</p>
+  </div>
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <h2
       class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
