--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     </a>
     <div class="flex gap-5">
       <div class="flex gap-3">
-        <a routerLink="/posts" class="px-4 hover:scale-105">Posts</a>
+        <a routerLink="/posts" class="px-4 hover:text-yellow-300">Posts</a>
       </div>
       <div class="flex gap-3 text-yellow-400 rounded-md" *ngIf="this.user">
         <a class="flex">
@@ -25,14 +25,32 @@
               d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
             />
           </svg>
-          <span>{{ this.user.username }}</span>
+          <span class="cursor-pointer">{{ this.user.username }}</span>
         </a>
-        <a class="cursor-pointer" (click)="logout()">Logout</a>
+        <a
+          class="cursor-pointer border-[1px] rounded px-3 bg-cyan-900 flex items-center hover:text-yellow-300"
+          (click)="logout()"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9"
+            />
+          </svg>
+        </a>
       </div>
 
       <div class="flex gap-5" *ngIf="!this.user">
-        <a routerLink="/login">Login</a>
-        <a routerLink="/register">Register</a>
+        <a class="hover:text-yellow-300" routerLink="/login">Login</a>
+        <a class="hover:text-yellow-300" routerLink="/register">Register</a>
       </div>
     </div>
   </div>
