--- a/src/app/post/post-detail/post-detail.component.html
+++ b/src/app/post/post-detail/post-detail.component.html
@@ -1,20 +1,34 @@
 <div class="w-full md:max-w-6xl xl:max-w-8xl mx-auto">
   <!-- post detail area -->
-  <div *ngIf="post">
-    <div class="mt-3 text-center">
-      <h2 class="text-2xl font-bold">{{ post.title | titlecase }}</h2>
-      <p class="my-3 flex justify-center items-center">
-        <span
-          class="bg-cyan-800 mr-3 text-gray-300 px-2 py-1 rounded text-xs"
-          *ngFor="let t of post.tags"
-        >
-          {{ t | uppercase }}</span
-        >
-      </p>
+  <div *ngIf="post" class="flex justify-center gap-5">
+    <div class="my-3 mr-3">
+      <img
+        class="mb-3 max-w-sm sm:max-w-md rounded-xl self-start md:hidden visible flex justify-center text-center mx-auto"
+        src="./../../../assets/img/1.jpg"
+        alt=""
+      />
+      <div class="text-center md:text-left">
+        <h2 class="text-2xl font-bold leading-6">
+          {{ post.title | titlecase }}
+        </h2>
+        <p class="my-3 flex justify-center items-center md:justify-start">
+          <span
+            class="bg-cyan-800 mr-3 text-gray-300 px-2 py-1 rounded text-xs"
+            *ngFor="let t of post.tags"
+          >
+            {{ t | uppercase }}</span
+          >
+        </p>
+        <p class="tracking-wide">
+          {{ post.body }}
+        </p>
+      </div>
     </div>
-    <div class="text-center md:text-left">
-      <p>{{ post.body }}</p>
-    </div>
+    <img
+      class="max-w-sm lg:ml-12 hidden md:flex"
+      src="./../../../assets/img/1.jpg"
+      alt=""
+    />
   </div>
   <div class="my-5 border-t-[1px] border-gray-300"></div>
   <!-- post comment area -->
