--- a/src/app/post/posts/posts.component.html
+++ b/src/app/post/posts/posts.component.html
@@ -1,5 +1,5 @@
 <div
-  class="mt-5 grid grid-rows-5 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full mx-auto md:max-w-6xl xl:max-w-8xl"
+  class="mt-5 grid grid-rows-4 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full mx-auto md:max-w-6xl xl:max-w-8xl"
 >
   <div
     class="p-3 border rounded"
@@ -49,7 +49,7 @@
     </div>
   </div>
 </div>
-<div class="mt-5">
+<div class="mt-5 w-full mx-auto md:max-w-6xl xl:max-w-8xl">
   <pagination-controls
     class="text-center"
     (pageChange)="p = $event"
